package com.palantir.paxos.persistence.generated;

message PaxosHeader {
    required bytes checksum = 1;
}

message PaxosValue {
    optional bytes bytes = 1;
    optional int64 seq = 2;
    optional string leaderUUID = 3;
}

message PaxosAcceptorState {
    optional PaxosProposalId lastPromisedId = 1;
    optional PaxosProposalId lastAcceptedId = 2;
    optional PaxosValue lastAcceptedValue = 3;
}

message PaxosProposalId {
    required int64 number = 1;
    optional string proposerUUID = 2;
}

message ExceptionProto {
    required string type = 1;
    optional string message = 2;
    repeated StackTraceElementProto stack_trace = 3;
    optional ExceptionProto cause = 4;
}

message StackTraceElementProto {
    required string declaring_class = 1;
    required string method_name = 2;
    optional string file_name = 3;
    optional sint32 line_number = 4;
}
